Fix metadata viewer layout with overflow

--- a/apps/demo/src/h5wasm/DropZone.module.css
+++ b/apps/demo/src/h5wasm/DropZone.module.css
@@ -38,6 +38,7 @@
 .h5web {
   flex: 1;
   display: flex;
+  min-width: 0;
   height: 100vh;
   z-index: 0; /* STACKING CONTEXT */
 }
